# SecureEraseOS

./: .gitignore  CMakeLists.txt  README.md
include/config/: Config.hpp
include/core/: Application.hpp
include/device/: Device.hpp  DeviceClassifier.hpp  DeviceInfoReader.hpp  DeviceManager.hpp  DeviceScanner.hpp  DeviceType.hpp  TransportDetector.hpp
include/erase/: EraseExecutor.hpp  EraseManager.hpp  EraseMethod.hpp  EraseStatus.hpp
include/executor/: CommandResult.hpp  CommandRunner.hpp  ExecutionMode.hpp
include/health/: HealthManager.hpp  SMARTInfo.hpp  SMARTParser.hpp  SMARTReader.hpp
include/io/: Buffer.hpp  DeviceIO.hpp
include/log/: Logger.hpp
include/report/: Report.hpp  ReportGenerator.hpp  ReportManager.hpp
include/safety/: SafetyChecker.hpp  SafetyResult.hpp
include/ui/: ProgressBar.hpp
src/: main.cpp
src/core/: Application.cpp
src/device/: Device.cpp  DeviceClassifier.cpp  DeviceInfoReader.cpp  DeviceManager.cpp  DeviceScanner.cpp  TransportDetector.cpp
src/erase/: EraseExecutor.cpp  EraseManager.cpp  EraseMethod.cpp
src/executor/: CommandResult.cpp  CommandRunner.cpp  ExecutionMode.cpp
src/health/: HealthManager.cpp  SMARTInfo.cpp  SMARTParser.cpp  SMARTReader.cpp
src/io/: Buffer.cpp  DeviceIO.cpp
src/log/: Logger.cpp
src/report/: Report.cpp  ReportGenerator.cpp  ReportManager.cpp
src/safety/: SafetyChecker.cpp  SafetyResult.cpp
src/ui/: ProgressBar.cpp
src/verify/: VerifyEngine.cpp
